# gameoflife

./: Cargo.toml
src/: gameoflife.rs
